[gd_scene load_steps=4 format=3 uid="uid://hx54ntuar56e"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_rct0a"]
[ext_resource type="Texture2D" uid="uid://bxlq5aw020ls8" path="res://sprites/menu/fondonew_menu.png" id="2_74u0a"]
[ext_resource type="AudioStream" uid="uid://l5ny7kyxhc7" path="res://audio/music/Hyrule Field   The Legend of Zelda_ Ocarina Of Time.mp3" id="3_mk5sr"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rct0a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -33.0
offset_right = 128.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ButtonIniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Iniciar Aventura"
metadata/_edit_lock_ = true

[node name="ButtonSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Salir"
metadata/_edit_lock_ = true

[node name="FondonewMenu" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576.5, 325)
scale = Vector2(0.605729, 0.614815)
texture = ExtResource("2_74u0a")

[node name="MusicWorld" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mk5sr")
autoplay = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/ButtonIniciar" to="." method="_on_button_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSalir" to="." method="_on_button_salir_pressed"]
